--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,7 @@
     --color-accent: #f472b6;
     /* Pink-400 */
 
-    --color-bg-dark: #0a0a0a;
+    --color-bg-dark: #020205;
     /* Almost Black */
     --color-bg-card: #171717;
     /* Neutral-900 */
